--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -54,9 +54,11 @@
     <Compile Include="CustomerBLL.cs" />
     <Compile Include="DashboardBLL.cs" />
     <Compile Include="Helper\HashHelper.cs" />
+    <Compile Include="Helper\MailHelper.cs" />
     <Compile Include="MovieBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helper\Session.cs" />
+    <Compile Include="ReportBLL.cs" />
     <Compile Include="TicketBLL.cs" />
     <Compile Include="UserBLL.cs" />
   </ItemGroup>
