--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -58,8 +58,10 @@
     <Compile Include="CustomerDAL.cs" />
     <Compile Include="DashboardDAL.cs" />
     <Compile Include="DashboardDTO.cs" />
+    <Compile Include="food_bill.cs" />
     <Compile Include="movie.cs" />
     <Compile Include="MovieDAL.cs" />
+    <Compile Include="product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ticket.cs" />
     <Compile Include="TicketDAL.cs" />
