--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -194,6 +194,9 @@
     <EmbeddedResource Include="FrmFood.resx">
       <DependentUpon>FrmFood.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmLogin.resx">
+      <DependentUpon>FrmLogin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmMainAdmin.resx">
       <DependentUpon>FrmMainAdmin.cs</DependentUpon>
     </EmbeddedResource>
